--- a/CreandoMarcos/nbproject/project.properties
+++ b/CreandoMarcos/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Prueba_nueva.jar
+dist.jar=${dist.dir}/CreandoMarcos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Prueba_nueva
+dist.jlink.output=${dist.jlink.dir}/CreandoMarcos
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Prueba_nueva
-main.class=prueba_nueva.Prueba_nueva
+jlink.launcher.name=CreandoMarcos
+main.class=creandomarcos.CreandoMarcos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
